se agrego el campo de direciones

--- a/src/app/contact-modal/contact-modal.component.html
+++ b/src/app/contact-modal/contact-modal.component.html
@@ -24,6 +24,11 @@
     <mat-label>Emails (separados por comas)</mat-label>
     <input matInput [(ngModel)]="emails">
   </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Direcciones (separadas por comas)</mat-label>
+    <input matInput [(ngModel)]="direcciones">
+  </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancelar</button>
