--- a/src/app/contact-modal/contact-modal.component.html
+++ b/src/app/contact-modal/contact-modal.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Agregar Nuevo Contacto</h2>
+<h2 mat-dialog-title>{{ isEditMode ? 'Actualizar Contacto' : 'Agregar Nuevo Contacto' }}</h2>
 <mat-dialog-content>
   <mat-form-field>
     <mat-label>Nombre</mat-label>
@@ -32,5 +32,5 @@
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancelar</button>
-  <button mat-button (click)="onSave()">Guardar</button>
+  <button mat-button (click)="onSave()">{{ isEditMode ? 'Actualizar' : 'Guardar' }}</button>
 </mat-dialog-actions>
