--- a/src/app/contactos/contactos.component.html
+++ b/src/app/contactos/contactos.component.html
@@ -25,7 +25,7 @@
         <th mat-header-cell *matHeaderCellDef> Acciones </th>
         <td mat-cell *matCellDef="let contacto">
           <button mat-button (click)="editar(contacto)">Actualizar</button>
-          <button mat-button (click)="eliminar(contacto.id)">Eliminar</button> <!-- Agregado el botón de eliminar -->
+          <button mat-button (click)="eliminar(contacto.id)">Eliminar</button> <!-- Botón de eliminar ahora llama al nuevo método -->
         </td>
       </ng-container>
   
