--- a/src/app/contactos/contactos.component.html
+++ b/src/app/contactos/contactos.component.html
@@ -19,6 +19,33 @@
         <th mat-header-cell *matHeaderCellDef> Apellido Materno </th>
         <td mat-cell *matCellDef="let contacto"> {{contacto.apellido_materno}} </td>
       </ng-container>
+
+      <ng-container matColumnDef="telefono">
+        <th mat-header-cell *matHeaderCellDef> Telefono </th>
+        <td mat-cell *matCellDef="let contacto">
+            <ul>
+                <li *ngFor="let telefono of contacto.telefonos">{{telefono.telefono}}</li>
+            </ul> 
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef> Email </th>
+        <td mat-cell *matCellDef="let contacto"> 
+            <ul>
+                <li *ngFor="let email of contacto.emails">{{email.email}}</li>
+              </ul>    
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="direccion">
+        <th mat-header-cell *matHeaderCellDef> Direccion </th>
+        <td mat-cell *matCellDef="let contacto"> 
+            <ul>
+                <li *ngFor="let direccion of contacto.direcciones">{{direccion.direccion}}</li>
+              </ul>
+        </td>
+      </ng-container>
   
       <!-- Acciones Column -->
       <ng-container matColumnDef="acciones">
