--- a/src/app/contactos/contactos.component.html
+++ b/src/app/contactos/contactos.component.html
@@ -52,7 +52,7 @@
         <th mat-header-cell *matHeaderCellDef> Acciones </th>
         <td mat-cell *matCellDef="let contacto">
           <button mat-button (click)="editar(contacto)">Actualizar</button>
-          <button mat-button (click)="eliminar(contacto.id)">Eliminar</button> <!-- Botón de eliminar ahora llama al nuevo método -->
+          <button mat-button (click)="eliminar(contacto.id)">Eliminar</button>
         </td>
       </ng-container>
   
