--- a/src/app/contactos/contactos.component.css
+++ b/src/app/contactos/contactos.component.css
@@ -14,4 +14,9 @@
   .mat-paginator-page-size-label {
     margin-right: 8px;
   }
-  
+  #title {
+    text-align: center;
+    font-size: 26px;
+    margin: 0;
+    padding: 0;
+  }
