--- a/src/app/contactos/contactos.component.html
+++ b/src/app/contactos/contactos.component.html
@@ -1,6 +1,8 @@
 <!-- src/app/contactos/contactos.component.html -->
 <div class="container">
-    <h2>Contactos</h2>
+    <div id="title">
+        <h2>Contactos</h2>
+    </div>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
       <!-- Nombre Column -->
       <ng-container matColumnDef="nombre">
