--- a/src/app/contactos/contactos.component.html
+++ b/src/app/contactos/contactos.component.html
@@ -3,6 +3,8 @@
     <div id="title">
         <h2>Contactos</h2>
     </div>
+    <button class="btn-agregar" mat-button (click)="agregar()">Agregar Nuevo Contacto</button>
+
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
       <!-- Nombre Column -->
       <ng-container matColumnDef="nombre">
@@ -53,8 +55,8 @@
       <ng-container matColumnDef="acciones">
         <th mat-header-cell *matHeaderCellDef> Acciones </th>
         <td mat-cell *matCellDef="let contacto">
-          <button mat-button (click)="editar(contacto)">Actualizar</button>
-          <button mat-button (click)="eliminar(contacto.id)">Eliminar</button>
+          <button class="btn-actualizar" mat-button (click)="editar(contacto)">Actualizar</button>
+          <button class="btn-eliminar" mat-button (click)="eliminar(contacto.id)">Eliminar</button>
         </td>
       </ng-container>
   
@@ -64,6 +66,5 @@
   
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
   
-    <button mat-button (click)="agregar()">Agregar Nuevo Contacto</button>
   </div>
   
